<resources>
    <string name="app_name">Help From Above</string>
    <string name="action_settings">Settings</string>
    <string name="action_cloud">Cloud Service</string>

    <!--content_main strings-->
    <string name="uas_image_view_description">Images from UAS to display to user</string>
    <string name="emergency_button_text">Emergency</string>
    <string name="uas_height_up_button_text">Up</string>
    <string name="uas_height_down_button_text">Down</string>
    <string name="session_start_button_text">Take Off</string>
    <string name="session_end_button_text">Land</string>
    <string name="light_switch_text">Light</string>

    <!--Message to display to user after sending emergency message-->
    <string name="emergency_message_sent_text">Emergency messages sent</string>
    <string name="emergency_message_delivered_text">Emergency messages delivered</string>

    <!--Message to display to user if they try to go to settings during a session-->
    <string name="settings_disabled">Settings disabled during a session</string>

    <!--Message to display when an image cannot be saved locally-->
    <string name="error_saving_local_image">Error saving image to device.</string>

    <!--Dialog strings-->
    <string name="location_calibrating_dialog_title">Calibrating&#x2026;</string>
    <string name="location_hhmd_calibrated_dialog_title">Waiting on UASC&#x2026;</string>
    <string name="location_uasc_calibrated_dialog_title">UASC calibrated. Syncing&#x2026;</string>
    <string name="wifi_p2p_connect_to_device_dialog_title">Connect to %1$s?</string>
    <string name="wifi_p2p_connecting_to_uasc_dialog_title">Establishing connection&#x2026;</string>
    <string name="wifi_p2p_waiting_on_uasc_dialog_title">Waiting for reply&#x2026;</string>
    <string name="wifi_p2p_connecting_from_uasc_dialog_title">Connecting&#x2026;</string>

    <!--content_wifi_p2p_connect strings-->
    <string name="title_activity_wifi_p2p_connect">Wi-Fi Connect</string>

    <!--Settings-->
    <string name="title_activity_settings">Settings</string>
    <string name="drawer_image_view_description">Image to be a background for the header</string>

    <!--Cloud Storage-->
    <string name="pref_header_cloud_storage">Could storage</string>
    <string name="pref_title_cloud_storage">Cloud storage provider</string>
    <string name="pref_key_cloud_storage_provider">cloud_storage_provider_key</string>
    <!--Cloud provider entries and values-->
    <string name="pref_entry_cloud_storage_provider_local">Local</string>
    <string name="pref_entry_cloud_storage_provider_dropbox">Dropbox</string>
    <string name="pref_entry_cloud_storage_provider_google_drive">Google Drive</string>
    <string name="pref_entry_cloud_storage_provider_one_drive">One Drive</string>
    <string name="pref_value_cloud_storage_provider_local">-1</string>
    <string name="pref_value_cloud_storage_provider_dropbox">0</string>
    <string name="pref_value_cloud_storage_provider_google_drive">1</string>
    <string name="pref_value_cloud_storage_provider_one_drive">2</string>
    <string name="pref_value_cloud_storage_provider_default">@string/pref_value_cloud_storage_provider_local</string>


    <!--Emergency-->
    <string name="pref_header_emergency">Emergency</string>
    <string name="pref_title_emergency_message_text">Emergency message text</string>
    <string name="pref_key_emergency_message_text">emergency_message_text_key</string>
    <string name="pref_title_emergency_message_name">Name</string>
    <string name="pref_key_emergency_message_name">emergency_message_name_key</string>
    <string name="pref_value_emergency_message_name_default">a \"Help From Above\" user</string>

    <!--Emergency message text entries and values-->
    <string name="pref_entry_emergency_message_text_short">Help!</string>
    <string name="pref_entry_emergency_message_text_medium">Please help me!</string>
    <string name="pref_entry_emergency_message_text_long">
        I\'m (Name), and I need Help! \nLocation: (Location) \nImages: (Cloud Link)
    </string>
    <string name="pref_value_emergency_message_text_short">0</string>
    <string name="pref_value_emergency_message_text_medium">1</string>
    <string name="pref_value_emergency_message_text_long">2</string>
    <string name="pref_value_emergency_message_text_default">@string/pref_value_emergency_message_text_medium</string>

    <!--EmergencyContacts-->
    <string name="pref_header_emergency_contacts">Emergency Contacts</string>
    <string name="pref_key_emergency_contacts">pref_key_emergency_contacts</string>
    <string name="pref_title_emergency_contacts">Emergency Contacts</string>
    <string-array name="empty_array" />

    <string name="app_credits_header">Credits</string>
    <string name="app_credits">Developers:\nCaleb Smith\nMichael Purcell\nMichael Partin\nNouf Bosalha\n\n\nCloud Integration: https://cloudrail.com/\nUAS Image: http://logomakr.com\n</string>

    <!-- Session Start -->
    <string name="pref_header_session_start">Session Start</string>
    <string name="pref_title_uas_start_height">UAS start height</string>
    <string name="pref_key_uas_start_height">pref_key_uas_start_height</string>
    <!--UAS start height entries and values-->
    <string name="pref_entry_uas_start_height_3_m">3 m</string>
    <string name="pref_entry_uas_start_height_5_m">5 m</string>
    <string name="pref_entry_uas_start_height_10_m">10 m</string>
    <string name="pref_value_uas_start_height_3_m">3</string>
    <string name="pref_value_uas_start_height_5_m">5</string>
    <string name="pref_value_uas_start_height_10_m">10</string>
    <string name="pref_value_uas_start_height_default">@string/pref_value_uas_start_height_5_m</string>

</resources>
