<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:id="@+id/emergency_message_text_preference"
        android:defaultValue="@string/pref_value_emergency_message_text_default"
        android:entries="@array/pref_entries_emergency_message_text"
        android:entryValues="@array/pref_values_emergency_message_text"
        android:key="@string/pref_key_emergency_message_text"
        android:negativeButtonText="@null"
        android:persistent="true"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_emergency_message_text" />

    <EditTextPreference
        android:id="@+id/emergency_message_name_preference"
        android:capitalize="words"
        android:defaultValue="@string/pref_default_emergency_message_name"
        android:enabled="true"
        android:inputType="textCapWords"
        android:key="@string/pref_key_emergency_message_name"
        android:maxLines="1"
        android:persistent="true"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_emergency_message_name" />

    <MultiSelectListPreference
        android:id="@+id/pref_emergency_contacts"
        android:entries="@array/empty_array"
        android:entryValues="@array/empty_array"
        android:key="@string/pref_key_emergency_contacts"
        android:negativeButtonText="@android:string/cancel"
        android:persistent="true"
        android:positiveButtonText="@android:string/ok"
        android:title="@string/pref_title_emergency_contacts" />

</PreferenceScreen>
