<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.helpfromabove.helpfromabove.MainActivity">
    <item
        android:id="@+id/cloud_storage_settings"
        android:fragment="com.helpfromabove.helpfromabove.SettingsActivity$CloudPreferenceFragment"
        android:icon="@drawable/ic_cloud_upload_black_24dp"
        android:title="@string/pref_header_cloud_storage" />

    <item
        android:id="@+id/emergency_settings"
        android:fragment="com.helpfromabove.helpfromabove.SettingsActivity$EmergencyPreferenceFragment"
        android:icon="@drawable/ic_sms_failed_black_24dp"
        android:title="@string/pref_header_emergency" />

    <item
        android:id="@+id/session_settings"
        android:fragment="com.helpfromabove.helpfromabove.SettingsActivity$SessionStartPreferenceFragment"
        android:icon="@drawable/ic_start_session_black"
        android:title="@string/pref_header_session_start" />
</menu>